@@ -11,7 +11,7 @@ jobs:
       fail-fast:    false
       max-parallel: 10
       matrix:
-        woocommerce: [ '6.0.0' ]
+        woocommerce: [ '6.1.0' ]
         wordpress:   [ 'latest' ]
         php:         [ '7.4' ]
     env:
