@@ -1,6 +1,8 @@
 *** WooCommerce Payments Changelog ***
 
 = 3.7.0 - 2022-xx-xx =
+* Update - Bump minimum required version of WordPress from 5.6 to 5.7.
+* Update - Bump minimum required version of WooCommerce from 4.5 to 4.6.
 * Add - Introduce sorting on disputes page.
 * Fix - Currency name not translated the Overview card title.
 * Add - Introduce advance filters on disputes page.
